--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
   hooks:
   - id: typos
     args: [--force-exclude]
+    priority: 1
 - repo: https://github.com/pre-commit/mirrors-clang-format
   rev: v21.1.2
   hooks:
@@ -40,6 +41,7 @@ repos:
     - id: pip-compile
       args: [requirements/test.in, -o, requirements/test.txt, --index-strategy, unsafe-best-match, --torch-backend, cu129, --python-platform, x86_64-manylinux_2_28, --python-version, "3.12"]
       files: ^requirements/test\.(in|txt)$
+      priority: 1
 - repo: local
   hooks:
   - id: format-torch-nightly-test
@@ -51,6 +53,7 @@ repos:
     name: Run mypy locally for lowest supported Python version
     entry: python tools/pre_commit/mypy.py 0 "3.10"
     stages: [pre-commit] # Don't run in CI
+    priority: 1
     <<: &mypy_common
       language: python
       types_or: [python, pyi]
@@ -59,21 +62,25 @@ repos:
   - id: mypy-3.10 # TODO: Use https://github.com/pre-commit/mirrors-mypy when mypy setup is less awkward
     name: Run mypy for Python 3.10
     entry: python tools/pre_commit/mypy.py 1 "3.10"
+    priority: 1
     <<: *mypy_common
     stages: [manual] # Only run in CI
   - id: mypy-3.11 # TODO: Use https://github.com/pre-commit/mirrors-mypy when mypy setup is less awkward
     name: Run mypy for Python 3.11
     entry: python tools/pre_commit/mypy.py 1 "3.11"
+    priority: 1
     <<: *mypy_common
     stages: [manual] # Only run in CI
   - id: mypy-3.12 # TODO: Use https://github.com/pre-commit/mirrors-mypy when mypy setup is less awkward
     name: Run mypy for Python 3.12
     entry: python tools/pre_commit/mypy.py 1 "3.12"
+    priority: 1
     <<: *mypy_common
     stages: [manual] # Only run in CI
   - id: mypy-3.13 # TODO: Use https://github.com/pre-commit/mirrors-mypy when mypy setup is less awkward
     name: Run mypy for Python 3.13
     entry: python tools/pre_commit/mypy.py 1 "3.13"
+    priority: 1
     <<: *mypy_common
     stages: [manual] # Only run in CI
   - id: shellcheck
@@ -86,6 +93,7 @@ repos:
     entry: tools/pre_commit/png-lint.sh
     language: script
     types: [png]
+    priority: 1
   - id: signoff-commit
     name: Sign-off Commit
     entry: bash
@@ -121,6 +129,7 @@ repos:
     name: Update Dockerfile dependency graph
     entry: tools/pre_commit/update-dockerfile-graph.sh
     language: script
+    priority: 1
   - id: enforce-import-regex-instead-of-re
     name: Enforce import regex as re
     entry: python tools/pre_commit/enforce_regex_import.py
