--- a/.github/workflows/macos-smoke-test.yml
+++ b/.github/workflows/macos-smoke-test.yml
@@ -39,42 +39,4 @@ jobs:
           python -c "import vllm; print(f'vLLM version: {vllm.__version__}')"
 
       - name: Smoke test vllm serve
-        run: |
-          # Start server in background
-          vllm serve Qwen/Qwen3-0.6B \
-            --max-model-len=2K \
-            --load-format=dummy \
-            --hf-overrides '{"num_hidden_layers": 2}' \
-            --enforce-eager \
-            --port 8000 &
-
-          SERVER_PID=$!
-
-          # Wait for server to start
-          for i in {1..30}; do
-            if curl -s http://localhost:8000/health > /dev/null; then
-              echo "Server started successfully"
-              break
-            fi
-            if [ "$i" -eq 30 ]; then
-              echo "Server failed to start"
-              kill "$SERVER_PID"
-              exit 1
-            fi
-            sleep 2
-          done
-
-          # Test health endpoint
-          curl -f http://localhost:8000/health
-
-          # Test completion
-          curl -f http://localhost:8000/v1/completions \
-            -H "Content-Type: application/json" \
-            -d '{
-              "model": "Qwen/Qwen3-0.6B",
-              "prompt": "Hello",
-              "max_tokens": 5
-            }'
-
-          # Cleanup
-          kill "$SERVER_PID"
+        run: bash tests/standalone_tests/smoke-test-server.sh
