--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -159,6 +159,7 @@ COPY requirements/common.txt requirements/common.txt
 COPY requirements/cuda.txt requirements/cuda.txt
 COPY use_existing_torch.py use_existing_torch.py
 RUN --mount=type=cache,target=/root/.cache/uv \
+    export PATH="/opt/venv/bin:/root/.local/bin:$PATH" && \
     . /etc/environment && \
     if [ "$USE_TORCH_NIGHTLY" = "true" ]; then \
         echo ">>> Running use_existing_torch.py to reset torch dependencies for nightly build" && \
