--- a/.buildkite/test_areas/weight_loading.yaml
+++ b/.buildkite/test_areas/weight_loading.yaml
@@ -16,7 +16,7 @@ steps:
 - label: Weight Loading Multiple GPU - Large Models # optional
   working_dir: "/vllm-workspace/tests"
   num_gpus: 2
-  gpu: a100
+  device: a100
   optional: true
   source_file_dependencies:
   - vllm/
